--- a/rubrics4.html
+++ b/rubrics4.html
@@ -14,7 +14,7 @@
 	
   <div id="main">
     <article>Article</article>
-    <nav class="myLinks">Nav</nav>
+    <nav class="myLinks">Page Nav</nav>
     <aside>Aside</aside>
   </div>
   <footer>Footer</footer>
