Changed stuff in class
Refrence adriana cox

--- a/rubrics4.html
+++ b/rubrics4.html
@@ -13,9 +13,16 @@
 	
 	
   <div id="main">
-    <article>Article</article>
-    <nav class="myLinks">Page Nav</nav>
-    <aside>Aside</aside>
+    <article id="myArticle">Hello, my name is Michael and go to school at Northwest Vista!</article>
+    <nav>
+    <ui>
+		<li id="myHome"> Home </li>
+   		<li id="myAbout"> About </li>
+   		<li id="myContact"> Contact </li>
+    	<li id="myPictures"> Pictures </li>
+	</ui>	
+ 
+    </nav>
   </div>
   <footer>Footer</footer>
 </body>
